// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Data layer integration tests Should initialize store 1`] = `
Object {
  "courseHome": Object {
    "courseId": null,
    "courseStatus": "loading",
  },
  "courseware": Object {
    "courseId": null,
    "courseStatus": "loading",
    "sequenceId": null,
    "sequenceStatus": "loading",
  },
  "models": Object {},
}
`;

exports[`Data layer integration tests Test fetchDatesTab Should fetch, normalize, and save metadata 1`] = `
Object {
  "courseHome": Object {
    "courseId": "course-v1:edX+DemoX+Demo_Course",
    "courseStatus": "loaded",
    "proctoringPanelStatus": "loading",
    "targetUserId": undefined,
    "toastBodyLink": null,
    "toastBodyText": null,
    "toastHeader": "",
  },
  "courseware": Object {
    "courseId": null,
    "courseStatus": "loading",
    "sequenceId": null,
    "sequenceMightBeUnit": false,
    "sequenceStatus": "loading",
  },
  "models": Object {
    "courseHomeMeta": Object {
      "course-v1:edX+DemoX+Demo_Course": Object {
        "canLoadCourseware": true,
        "celebrations": null,
        "courseAccess": Object {
          "additionalContextUserMessage": null,
          "developerMessage": null,
          "errorCode": null,
          "hasAccess": true,
          "userFragment": null,
          "userMessage": null,
        },
        "id": "course-v1:edX+DemoX+Demo_Course",
        "isEnrolled": false,
        "isMasquerading": false,
        "isSelfPaced": false,
        "isStaff": false,
        "number": "DemoX",
        "org": "edX",
        "tabs": Array [
          Object {
            "slug": "courseware",
            "title": "Course",
            "url": "http://localhost:18000/courses/course-v1:edX+DemoX+Demo_Course/course/",
          },
          Object {
            "slug": "discussion",
            "title": "Discussion",
            "url": "http://localhost:18000/courses/course-v1:edX+DemoX+Demo_Course/discussion/forum/",
          },
          Object {
            "slug": "wiki",
            "title": "Wiki",
            "url": "http://localhost:18000/courses/course-v1:edX+DemoX+Demo_Course/course_wiki",
          },
          Object {
            "slug": "progress",
            "title": "Progress",
            "url": "http://localhost:18000/courses/course-v1:edX+DemoX+Demo_Course/progress",
          },
          Object {
            "slug": "instructor",
            "title": "Instructor",
            "url": "http://localhost:18000/courses/course-v1:edX+DemoX+Demo_Course/instructor",
          },
          Object {
            "slug": "dates",
            "title": "Dates",
            "url": "http://localhost:18000/courses/course-v1:edX+DemoX+Demo_Course/dates",
          },
          Object {
            "slug": "badges-progress",
            "title": "Badges",
            "url": "http://localhost:18000/courses/course-v1:edX+DemoX+Demo_Course_1/badges-progress",
          },
        ],
        "title": "Demonstration Course",
        "userTimezone": "UTC",
        "username": "MockUser",
        "verifiedMode": Object {
          "accessExpirationDate": null,
          "currency": "USD",
          "currencySymbol": "$",
          "price": 149,
          "sku": "8CF08E5",
          "upgradeUrl": "http://localhost:18130/basket/add/?sku=8CF08E5",
        },
      },
    },
    "dates": Object {
      "course-v1:edX+DemoX+Demo_Course": Object {
        "courseDateBlocks": Array [
          Object {
            "date": "2013-02-05T05:00:00Z",
            "dateType": "course-start-date",
            "description": "",
            "extraInfo": "",
            "learnerHasAccess": true,
            "link": "",
            "title": "Course Starts",
          },
        ],
        "datesBannerInfo": Object {
          "contentTypeGatingEnabled": false,
          "missedDeadlines": false,
          "missedGatedContent": false,
        },
        "hasEnded": false,
        "id": "course-v1:edX+DemoX+Demo_Course",
        "learnerIsFullAccess": true,
        "missedDeadlines": false,
        "missedGatedContent": false,
        "userTimezone": null,
        "verifiedUpgradeLink": "http://localhost:18130/basket/add/?sku=8CF08E5",
      },
    },
  },
  "recommendations": Object {
    "recommendationsStatus": "loading",
  },
  "tours": Object {
    "showCoursewareTour": false,
    "showExistingUserCourseHomeTour": false,
    "showNewUserCourseHomeModal": false,
    "showNewUserCourseHomeTour": false,
    "toursEnabled": false,
  },
}
`;

exports[`Data layer integration tests Test fetchOutlineTab Should fetch, normalize, and save metadata 1`] = `
Object {
  "courseHome": Object {
    "courseId": "course-v1:edX+DemoX+Demo_Course",
    "courseStatus": "loaded",
    "proctoringPanelStatus": "loading",
    "targetUserId": undefined,
    "toastBodyLink": null,
    "toastBodyText": null,
    "toastHeader": "",
  },
  "courseware": Object {
    "courseId": null,
    "courseStatus": "loading",
    "sequenceId": null,
    "sequenceMightBeUnit": false,
    "sequenceStatus": "loading",
  },
  "models": Object {
    "courseHomeMeta": Object {
      "course-v1:edX+DemoX+Demo_Course": Object {
        "canLoadCourseware": true,
        "celebrations": null,
        "courseAccess": Object {
          "additionalContextUserMessage": null,
          "developerMessage": null,
          "errorCode": null,
          "hasAccess": true,
          "userFragment": null,
          "userMessage": null,
        },
        "id": "course-v1:edX+DemoX+Demo_Course",
        "isEnrolled": false,
        "isMasquerading": false,
        "isSelfPaced": false,
        "isStaff": false,
        "number": "DemoX",
        "org": "edX",
        "tabs": Array [
          Object {
            "slug": "courseware",
            "title": "Course",
            "url": "http://localhost:18000/courses/course-v1:edX+DemoX+Demo_Course/course/",
          },
          Object {
            "slug": "discussion",
            "title": "Discussion",
            "url": "http://localhost:18000/courses/course-v1:edX+DemoX+Demo_Course/discussion/forum/",
          },
          Object {
            "slug": "wiki",
            "title": "Wiki",
            "url": "http://localhost:18000/courses/course-v1:edX+DemoX+Demo_Course/course_wiki",
          },
          Object {
            "slug": "progress",
            "title": "Progress",
            "url": "http://localhost:18000/courses/course-v1:edX+DemoX+Demo_Course/progress",
          },
          Object {
            "slug": "instructor",
            "title": "Instructor",
            "url": "http://localhost:18000/courses/course-v1:edX+DemoX+Demo_Course/instructor",
          },
          Object {
            "slug": "dates",
            "title": "Dates",
            "url": "http://localhost:18000/courses/course-v1:edX+DemoX+Demo_Course/dates",
          },
          Object {
            "slug": "badges-progress",
            "title": "Badges",
            "url": "http://localhost:18000/courses/course-v1:edX+DemoX+Demo_Course_1/badges-progress",
          },
        ],
        "title": "Demonstration Course",
        "userTimezone": "UTC",
        "username": "MockUser",
        "verifiedMode": Object {
          "accessExpirationDate": null,
          "currency": "USD",
          "currencySymbol": "$",
          "price": 149,
          "sku": "8CF08E5",
          "upgradeUrl": "http://localhost:18130/basket/add/?sku=8CF08E5",
        },
      },
    },
    "outline": Object {
      "course-v1:edX+DemoX+Demo_Course": Object {
        "accessExpiration": null,
        "canShowUpgradeSock": false,
        "certData": Object {
          "certStatus": null,
          "certWebViewUrl": null,
          "certificateAvailableDate": null,
          "downloadUrl": null,
        },
        "courseBlocks": Object {
          "courses": Object {
            "block-v1:edX+DemoX+Demo_Course+type@course+block@bcdabcdabcdabcdabcdabcdabcdabcd3": Object {
              "hasScheduledContent": false,
              "id": "course-v1:edX+DemoX+Demo_Course",
              "sectionIds": Array [
                "block-v1:edX+DemoX+Demo_Course+type@chapter+block@bcdabcdabcdabcdabcdabcdabcdabcd3",
              ],
              "title": "bcdabcdabcdabcdabcdabcdabcdabcd4",
            },
          },
          "sections": Object {
            "block-v1:edX+DemoX+Demo_Course+type@chapter+block@bcdabcdabcdabcdabcdabcdabcdabcd2": Object {
              "complete": false,
              "courseId": "course-v1:edX+DemoX+Demo_Course",
              "id": "block-v1:edX+DemoX+Demo_Course+type@chapter+block@bcdabcdabcdabcdabcdabcdabcdabcd2",
              "resumeBlock": false,
              "sequenceIds": Array [
                "block-v1:edX+DemoX+Demo_Course+type@sequential+block@bcdabcdabcdabcdabcdabcdabcdabcd2",
              ],
              "title": "bcdabcdabcdabcdabcdabcdabcdabcd3",
            },
          },
          "sequences": Object {
            "block-v1:edX+DemoX+Demo_Course+type@sequential+block@bcdabcdabcdabcdabcdabcdabcdabcd2": Object {
              "id": "block-v1:edX+DemoX+Demo_Course+type@sequential+block@bcdabcdabcdabcdabcdabcdabcdabcd2",
              "lmsWebUrl": "http://localhost:18000/courses/course-v1:edX+DemoX+Demo_Course/jump_to/block-v1:edX+DemoX+Demo_Course+type@sequential+block@bcdabcdabcdabcdabcdabcdabcdabcd2",
              "sectionId": "block-v1:edX+DemoX+Demo_Course+type@chapter+block@bcdabcdabcdabcdabcdabcdabcdabcd3",
              "title": "bcdabcdabcdabcdabcdabcdabcdabcd2",
              "unitIds": Array [
                "block-v1:edX+DemoX+Demo_Course+type@vertical+block@bcdabcdabcdabcdabcdabcdabcdabcd1",
              ],
            },
          },
        },
        "courseGoals": Object {
          "daysPerWeek": null,
          "goalOptions": Array [],
          "selectedGoal": null,
          "subscribedToReminders": null,
          "weeklyLearningGoalEnabled": false,
        },
        "courseTools": Array [
          Object {
            "analyticsId": "edx.bookmarks",
            "title": "Bookmarks",
            "url": "https://example.com/bookmarks",
          },
        },
        "courseTools": Object {
          "analyticsId": "edx.bookmarks",
          "title": "Bookmarks",
          "url": "http://localhost:18000/courses/course-v1:edX+DemoX+Demo_Course/bookmarks/",
        },
        "enableProctoredExams": undefined,
        "enrollAlert": Object {
          "canEnroll": true,
          "extraText": "Contact the administrator.",
        },
        "enrollmentMode": undefined,
        "handoutsHtml": "<ul><li>Handout 1</li></ul>",
        "hasEnded": undefined,
        "hasScheduledContent": null,
        "id": "course-v1:edX+DemoX+Demo_Course",
        "offer": null,
        "resumeCourse": Object {
          "hasVisitedCourse": false,
          "url": "http://localhost:18000/courses/course-v1:edX+DemoX+Demo_Course/jump_to/block-v1:edX+Test+Block@12345abcde",
        },
        "timeOffsetMillis": 0,
        "userHasPassingGrade": undefined,
        "verifiedMode": Object {
          "accessExpirationDate": "2050-01-01T12:00:00",
          "currency": "USD",
          "currencySymbol": "$",
          "price": 149,
          "sku": "ABCD1234",
          "upgradeUrl": "http://localhost:18000/dashboard",
        },
        "welcomeMessageHtml": "<p>Welcome to this course!</p>",
      },
    },
  },
  "recommendations": Object {
    "recommendationsStatus": "loading",
  },
  "tours": Object {
    "showCoursewareTour": false,
    "showExistingUserCourseHomeTour": false,
    "showNewUserCourseHomeModal": false,
    "showNewUserCourseHomeTour": false,
    "toursEnabled": false,
  },
}
`;

exports[`Data layer integration tests Test fetchProgressTab Should fetch, normalize, and save metadata 1`] = `
Object {
  "courseHome": Object {
    "courseId": "course-v1:edX+DemoX+Demo_Course",
    "courseStatus": "loaded",
    "proctoringPanelStatus": "loading",
    "targetUserId": undefined,
    "toastBodyLink": null,
    "toastBodyText": null,
    "toastHeader": "",
  },
  "courseware": Object {
    "courseId": null,
    "courseStatus": "loading",
    "sequenceId": null,
    "sequenceMightBeUnit": false,
    "sequenceStatus": "loading",
  },
  "models": Object {
    "courseHomeMeta": Object {
      "course-v1:edX+DemoX+Demo_Course": Object {
        "canLoadCourseware": true,
        "celebrations": null,
        "courseAccess": Object {
          "additionalContextUserMessage": null,
          "developerMessage": null,
          "errorCode": null,
          "hasAccess": true,
          "userFragment": null,
          "userMessage": null,
        },
        "id": "course-v1:edX+DemoX+Demo_Course",
        "isEnrolled": false,
        "isMasquerading": false,
        "isSelfPaced": false,
        "isStaff": false,
        "number": "DemoX",
        "org": "edX",
        "originalUserIsStaff": false,
        "start": "2013-02-05T05:00:00Z",
        "tabs": Array [
          Object {
            "slug": "outline",
            "title": "Course",
            "url": "http://localhost:18000/courses/course-v1:edX+DemoX+Demo_Course/course/",
          },
          Object {
            "slug": "discussion",
            "title": "Discussion",
            "url": "http://localhost:18000/courses/course-v1:edX+DemoX+Demo_Course/discussion/forum/",
          },
          Object {
            "slug": "wiki",
            "title": "Wiki",
            "url": "http://localhost:18000/courses/course-v1:edX+DemoX+Demo_Course/course_wiki",
          },
          Object {
            "slug": "progress",
            "title": "Progress",
            "url": "http://localhost:18000/courses/course-v1:edX+DemoX+Demo_Course/progress",
          },
          Object {
            "slug": "instructor",
            "title": "Instructor",
            "url": "http://localhost:18000/courses/course-v1:edX+DemoX+Demo_Course/instructor",
          },
          Object {
            "slug": "dates",
            "title": "Dates",
            "url": "http://localhost:18000/courses/course-v1:edX+DemoX+Demo_Course/dates",
          },
          Object {
            "slug": "badges-progress",
            "title": "Badges",
            "url": "http://localhost:18000/courses/course-v1:edX+DemoX+Demo_Course_1/badges-progress",
          },
        ],
        "title": "Demonstration Course",
        "userTimezone": "UTC",
        "username": "MockUser",
        "verifiedMode": Object {
          "accessExpirationDate": null,
          "currency": "USD",
          "currencySymbol": "$",
          "price": 149,
          "sku": "8CF08E5",
          "upgradeUrl": "http://localhost:18130/basket/add/?sku=8CF08E5",
        },
      },
    },
    "progress": Object {
      "course-v1:edX+DemoX+Demo_Course": Object {
        "accessExpiration": null,
        "certificateData": Object {},
        "completionSummary": Object {
          "completeCount": 1,
          "incompleteCount": 1,
          "lockedCount": 0,
        },
        "courseGrade": Object {
          "isPassing": true,
          "letterGrade": "pass",
          "percent": 1,
        },
        "courseId": "course-v1:edX+DemoX+Demo_Course",
        "creditCourseRequirements": null,
        "end": "3027-03-31T00:00:00Z",
        "enrollmentMode": "audit",
        "gradesFeatureIsFullyLocked": false,
        "gradesFeatureIsPartiallyLocked": false,
        "gradingPolicy": Object {
          "assignmentPolicies": Array [
            Object {
              "averageGrade": "1.00",
              "numDroppable": 1,
              "shortLabel": "HW",
              "type": "Homework",
              "weight": 1,
              "weightedGrade": 1,
            },
          ],
          "gradeRange": Object {
            "pass": 0.75,
          },
        },
        "hasScheduledContent": false,
        "id": "course-v1:edX+DemoX+Demo_Course",
        "sectionScores": Array [
          Object {
            "displayName": "First section",
            "subsections": Array [
              Object {
                "assignmentType": "Homework",
                "blockKey": "block-v1:edX+DemoX+Demo_Course+type@sequential+block@12345",
                "displayName": "First subsection",
                "hasGradedAssignment": true,
                "learnerHasAccess": true,
                "numPointsEarned": 0,
                "numPointsPossible": 3,
                "percentGraded": 0,
                "problemScores": Array [
                  Object {
                    "earned": 0,
                    "possible": 1,
                  },
                  Object {
                    "earned": 0,
                    "possible": 1,
                  },
                  Object {
                    "earned": 0,
                    "possible": 1,
                  },
                ],
                "showCorrectness": "always",
                "showGrades": true,
                "url": "http://learning.edx.org/course/course-v1:edX+Test+run/first_subsection",
              },
            ],
          },
          Object {
            "displayName": "Second section",
            "subsections": Array [
              Object {
                "assignmentType": "Homework",
                "displayName": "Second subsection",
                "hasGradedAssignment": true,
                "numPointsEarned": 1,
                "numPointsPossible": 1,
                "percentGraded": 1,
                "problemScores": Array [
                  Object {
                    "earned": 1,
                    "possible": 1,
                  },
                ],
                "showCorrectness": "always",
                "showGrades": true,
                "url": "http://learning.edx.org/course/course-v1:edX+Test+run/second_subsection",
              },
            ],
          },
        ],
        "studioUrl": "http://studio.edx.org/settings/grading/course-v1:edX+Test+run",
        "userHasPassingGrade": false,
        "verificationData": Object {
          "link": null,
          "status": "none",
          "statusDate": null,
        },
        "verifiedMode": null,
      },
    },
  },
  "recommendations": Object {
    "recommendationsStatus": "loading",
  },
  "tours": Object {
    "showCoursewareTour": false,
    "showExistingUserCourseHomeTour": false,
    "showNewUserCourseHomeModal": false,
    "showNewUserCourseHomeTour": false,
    "toursEnabled": false,
  },
}
`;
